added conso, credentials, direct and user API

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ lxml~=4.4.2
 pip~=19.3.1
 argparse~=1.4.0
 configparser~=4.0.2
-zlib~=1.2.11
 wheel~=0.33.6
 request~=2019.4.13
 openssl~=1.1.1f
@@ -40,3 +39,4 @@ appdirs~=1.4.3
 python~=3.7.4
 bcrypt~=3.1.7
 zipp~=3.1.0
+munch~=2.5.0
