--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@ pip~=19.3.1
 argparse~=1.4.0
 configparser~=4.0.2
 wheel~=0.33.6
-request~=2019.4.13
-openssl~=1.1.1f
 cryptography~=2.8
 typing~=3.7.4.3
 filelock~=3.0.12
@@ -14,15 +12,13 @@ packaging~=20.4
 attrs~=19.3.0
 future~=0.18.2
 tqdm~=4.36.1
-requests~=2.24.0
-ipython~=7.12.0
+requests~=2.25.1
 isort~=4.3.21
 setuptools~=41.4.0
 rfc3986~=1.4.0
 urllib3~=1.25.7
 wcwidth~=0.1.8
 pexpect~=4.8.0
-numpy~=1.18.1
 certifi~=2019.11.28
 chardet~=3.0.4
 idna~=2.8
@@ -36,7 +32,15 @@ snowballstemmer~=2.0.0
 virtualenv~=20.4.0
 distlib~=0.3.1
 appdirs~=1.4.3
-python~=3.7.4
 bcrypt~=3.1.7
 zipp~=3.1.0
 munch~=2.5.0
+sphinx-automodapi==0.13
+sphinx-markdown-tables==0.0.15
+sphinx-rtd-theme==0.5.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
