--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,3 +7,5 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+munch==2.5.0
+requests==2.25.1
