--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,6 +10,8 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF
 formats:
    - pdf
+   - epub
+   - html
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
